--- a/src/genedatafactory/config.yaml
+++ b/src/genedatafactory/config.yaml
@@ -3,21 +3,27 @@ user_agent: "Mozilla/5.0 (compatible; fetch-refs/1.0)"
 
 files:
   OMIM: "mim2gene_medgen"
+  GENE_RIFS: "generifs_basic.gz"
   GO: "go-basic.obo"
   GO_2: "gene2go.gz"
   SWISSPROT: "uniprot_sprot.dat.gz"
   REACTOME : "NCBI2Reactome_All_Levels.txt"
   CLINVAR: "variant_summary.txt.gz"
   MONDO: "mondo.obo"
+  MGDEF: "MGDEF.RRF.gz"
+  MGDEF_MAPPING: "MedGenIDMappings.txt.gz"
 
 url:
   mim2gene_medgen: "https://ftp.ncbi.nih.gov/gene/DATA/mim2gene_medgen"
+  generifs_basic.gz: "https://ftp.ncbi.nlm.nih.gov/gene/GeneRIF/generifs_basic.gz"
   go-basic.obo: "https://current.geneontology.org/ontology/go-basic.obo"
   gene2go.gz: "https://ftp.ncbi.nih.gov/gene/DATA/gene2go.gz"
   uniprot_sprot.dat.gz: "https://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/complete/uniprot_sprot.dat.gz"
   NCBI2Reactome_All_Levels.txt: "https://reactome.org/download/current/NCBI2Reactome_All_Levels.txt"
   variant_summary.txt.gz: "https://ftp.ncbi.nlm.nih.gov/pub/clinvar/tab_delimited/variant_summary.txt.gz"
   mondo.obo: "https://purl.obolibrary.org/obo/mondo.obo"
+  MGDEF.RRF.gz: "https://ftp.ncbi.nlm.nih.gov/pub/medgen/MGDEF.RRF.gz"
+  MedGenIDMappings.txt.gz: "https://ftp.ncbi.nlm.nih.gov/pub/medgen/MedGenIDMappings.txt.gz"
 
 string_api:
   url_map: "https://string-db.org/api/tsv/get_string_ids"
