--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ statsmodels==0.14.5
 sympy==1.14.0
 tokenizers==0.22.1
 torch==2.9.0
+torch-geometric==2.7.0
 tqdm==4.67.1
 transformers==4.57.1
 typing-inspection==0.4.2
